--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,9 @@ message = Bump version: v{new_version}
 [bumpversion:file:Cargo.toml]
 parse = "version = \"(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\""
 
+[bumpversion:file:docs/index.rst]
+parse = "Goupil \"(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\""
+
 [bumpversion:file:pyproject.toml]
 parse = "version = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)"
 
