--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -14,4 +14,4 @@ parse = "Goupil \"(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\""
 parse = "version = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)"
 
 [bumpversion:file:src/python/goupil/__init__.py]
-parse = "__version__ = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)"
+parse = "VERSION = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)"
