--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,8 +7,8 @@ message = Bump version: v{new_version}
 [bumpversion:file:Cargo.toml]
 parse = "version = \"(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\""
 
-[bumpversion:file:docs/index.rst]
-parse = "Goupil \"(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\""
+[bumpversion:file:docs/conf.py]
+parse = "release = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'"
 
 [bumpversion:file:pyproject.toml]
 parse = "version = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)"
