--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ libloading = "0.8"
 once_cell = "1.18"
 process_path = "0.1"
 rand = "0.8"
+regex = "1.10"
 rmp-serde = "1.1"
 serde = "1"
 serde_derive = "1"
@@ -18,11 +19,10 @@ serde_derive = "1"
 getrandom = { version = "0.2", optional = true }
 pyo3 = { version = "0.20", features = ["abi3", "anyhow", "extension-module"], optional = true }
 rand_pcg = { version = "0.3", features = ["serde1"], optional = true }
-regex = { version = "1.10", optional = true }
 
 [features]
 f32 = []
-python = ["dep:getrandom", "dep:pyo3", "dep:rand_pcg", "dep:regex"]
+python = ["dep:getrandom", "dep:pyo3", "dep:rand_pcg"]
 
 [lib]
 name = "goupil"
