--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
-commit = False
+commit = True
 tag = False
-current_version = 1.1.0
+current_version = 1.1.1
 message = Bump version: v{new_version}
 
 [bumpversion:file:Cargo.toml]
