--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,21 @@ args = ["--features", "python"]
 
 # Build options for Python wheels.
 [tool.cibuildwheel.linux]
-before-all = "curl -sSf https://sh.rustup.rs -o rustup.sh ; sh rustup.sh -y"
-build = "cp37-manylinux_x86_64"
-environment = "PATH=$HOME/.cargo/bin:$PATH"
+build = [ "cp37-manylinux_x86_64", "cp37-manylinux_aarch64" ]
 manylinux-x86_64-image = "manylinux2014"
 
+environment = "PATH=$HOME/.cargo/bin:$PATH"
+environment-pass = [ "GEANT4_PREFIX" ]
+before-all = """
+curl -sSf https://sh.rustup.rs -o rustup.sh && \
+sh rustup.sh -y\
+"""
+
 [tool.cibuildwheel.macos]
-build = "cp37-macosx_x86_64"
+build = [ "cp38-macosx_arm64", "cp38-macosx_x86_64" ]
+
+[tool.cibuildwheel.windows]
+build = [ "cp39-win_amd64", "cp39-win_arm64" ]
+
+before-all = "python3 -m pip install delvewheel"
+repair-wheel-command = 'delvewheel repair -w {dest_dir} -v {wheel}'
